--- a/style.css
+++ b/style.css
@@ -35,6 +35,22 @@ body {
   letter-spacing: 4px;
 }
 
+.form__input-field {
+  display: flex;
+}
+
+.form__input-field i {
+  margin-left: 10px;
+  color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.form__input-field i:hover {
+  color: #fff;
+  transform: translateY(-3px) scale(1.03);
+}
+
 .form__question input[type='text'] {
   background: rgba(255, 255, 255, 0.6);
   border: none;
