--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ body {
   outline: none;
 }
 
+.error-message {
+  background: rgba(255, 255, 255, 0.6);
+  margin-bottom: 10px;
+  color: red;
+  padding: 5px;
+  border-radius: 5px;
+  display: none;
+}
+
 div.inactive {
   opacity: 0;
   pointer-events: none;
