--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
   border-radius: 5px;
   height: 50px;
   width: 100%;
-  max-width: 80%;
+  min-width: 500px;
   box-shadow: 3px 5px 5px 0px rgba(0, 0, 0, 0.2);
   outline: none;
 }
