--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ body {
 .summary__title {
   text-align: center;
   color: #f37335;
+  font-size: 36px;
   font-weight: 200;
   letter-spacing: 5px;
   margin-top: 50px;
@@ -146,19 +147,39 @@ body {
   padding: 10px;
   margin: 50px auto;
   border-radius: 5px;
-  height: 50px;
   width: 100%;
   min-width: 500px;
   box-shadow: 3px 5px 5px 0px rgba(0, 0, 0, 0.2);
   outline: none;
 }
-
 .summary__item:last-child {
-  height: 150px;
+  min-height: 100px;
+}
+
+.summary__item h4 {
+  text-align: center;
+  color: #f37335;
+  font-size: 22px;
+  font-weight: 200;
+  letter-spacing: 5px;
 }
 
 .summary__item p {
   text-align: center;
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+
+#account-plan {
+  background: rgba(255, 255, 255, 0.6);
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  height: 50px;
+  width: 400px;
+  box-shadow: 3px 5px 5px 0px rgba(0, 0, 0, 0.2);
+  outline: none;
 }
 
 div.inactive {
