--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ body {
   transition: all 0.2s ease;
 }
 
+.arrow-right {
+  color: #fff;
+}
+
 .form__input-field i:hover {
   color: #fff;
   transform: translateY(-3px) scale(1.03);
